Correct image alignment in Sponsor section

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -90,7 +90,8 @@
   margin: auto;
 }
 
-.sponsorImage { 
+.sponsorImage {
+  display: block; 
   margin: auto;
   object-fit: contain;
 }
